book/_build/html/reports/london.log
Traceback (most recent call last):
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/nbclient/client.py", line 1082, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/nbclient/client.py", line 536, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/nbclient/client.py", line 827, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/Emman/opt/anaconda3/envs/env-jupyterbook/lib/python3.7/site-packages/nbclient/client.py", line 735, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
:tags: [remove-cell]

filepath = "/Volumes/data/projects/data/london-data/london-data.csv"
------------------

[0;36m  File [0;32m"<ipython-input-2-602a83aafe36>"[0;36m, line [0;32m1[0m
[0;31m    :tags: [remove-cell][0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-602a83aafe36>, line 1)

